using System.Collections;
using System.Collections.Generic;
using UnityEngine;

public class Constant
{
    // anim
    public const string IDLE_ANIM = "idle";
    public const string RUN_ANIM = "run";
    public const string DEAD_ANIM = "dead";
    public const string WIN_ANIM = "win";
    public const string DANCE_ANIM = "dance";
    public const string UTIL_ANIM = "ulti";
    public const string ATTACK_ANIM = "attack";

    //tag
    public const string ENEMY_TAG = "Enemy";
    public const string PLAYER_TAG = "Player";


}
