using System.Collections;
using System.Collections.Generic;
using UnityEngine;

public class Constant
{
    // anim
    public const string IDLE_ANIM = "idle";
    public const string RUN_ANIM = "run";
    public const string DEAD_ANIM = "dead";
    public const string WIN_ANIM = "win";
    public const string DANCE_ANIM = "dance";
    public const string UTIL_ANIM = "ulti";
    public const string ATTACK_ANIM = "attack";

    //tag
    public const string CHARACTER_TAG = "Character";
    public const string BARRIER_TAG = "Barrier";

    public const string EQUIP_TEXT = "equip";
    public const string EQUIPPED_TEXT = "equipped";


    public const string SOUND_BOTDEATH = "BotDeath";
    public const string SOUND_PLAYERDIE = "PlayerDie";
    public const string SOUND_LOSE = "Lose";
    public const string SOUND_WIN = "Win";
    public const string SOUND_BUTTONCLICK = "ButtonClick";
    public const string SOUND_THROWWEAPON= "ThrowWeapon";
    public const string SOUND_WEAPONHIT = "WeaponHit";
}
